# COMP4981Server

./: .gitignore  CMakeLists.txt  Client  Client.cpp  Client.hpp  Client2  ConnectivityManager.cpp  Lobby.cpp  Lobby.hpp  LobbyManager.cpp  LobbyManager.hpp  Makefile  README.md  SelectServer.cpp  Server  Server.hpp  a.out  client  client.exe.stackdump  client2  defaultTCP.c  defaultTCP2.c  gameObject.json  gameObject2.json  main  main.cpp  messageFunctions.c  messageFunctions.h  server  tcpClient.cpp  tcpServer.cpp  test
Executables/: README.md  Server.exe.stackdump  client.exe.stackdump
GameScene/: GameState.cpp  GameState.hpp  GameState.json  GameStateDefault.json  README.md  SelectServer.cpp  Server.hpp  gameObject.json
LobbyScene/: Client.hpp  LobbyManager.cpp  client2.c  main.cpp
Networking/: ConnectivityManager.hpp  tcpServer.cpp
Other/: defaultTCP.c  old_Makefile  tcpClient.cpp
Server/: SelectServer.cpp
Server Handler/Game/: GameState.cpp  GameState.json  GameStateOld.json  testGS.cpp
Server Handler/Lobby/: Client.cpp
